--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
         </dependency>
+        <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
     </dependencies>
     <properties>
         <jersey.version>2.28</jersey.version>
