--- a/src/main/webapp/html/web.xml
+++ b/src/main/webapp/html/web.xml
@@ -17,7 +17,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Jersey Web Application</servlet-name>
-    <url-pattern>/LibrarySystem_D/api/v1.1/*</url-pattern>
+    <url-pattern>api/v1.1/*</url-pattern>
   </servlet-mapping>
 
 
